Coded in scanner page top headings and fixed spacing

--- a/static/surfacescanner/css/surfacescanner.css
+++ b/static/surfacescanner/css/surfacescanner.css
@@ -10,48 +10,123 @@
     z-index: 2 !important;
 }
 
+.top-title {
+    margin-top: 5%;
+}
+
 .first-text {
-    margin-top: 80%;
+    margin-top: 20%;
     overflow-x: hidden;
+
+}
+
+.white {
+    color: white;
+    font-weight: bold;
+}
+
+.orange {
+    color: orange;
+    font-weight: bold;
 }
 
 .title {
+    font-size: 5vw;
+}
+
+.big-title {
     font-size: 5.5vw !important;
 }
 
 @media screen and (min-width: 430px) {
-    .title {
+
+    .big-title {
         font-size: 5vw !important;
     }
-}
 
-@media screen and (min-width: 592px) {
+    .first-text {
+        margin-top: 26%;
+    }
+
     .title {
-        font-size: 4vw !important;
+        font-size: 4.7vw;
     }
 }
 
+@media screen and (min-width: 530px) {
+    .big-title {
+        font-size: 4.8vw !important;
+    }
 
-@media screen and (min-width: 900px) {
     .title {
-        font-size: 2.8vw !important;
+        font-size: 3.5vw !important;
+        font-weight: bold !important;
+    }
+
+    .top-title {
+        letter-spacing: 3px;
+    }
+
+    .first-p {
+        margin-top: 5%;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .first-text {
+        margin-top: 20%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .first-text {
+        margin-top: 15%;
     }
 
     .scanner-li {
-        margin-top: 60px;
+        margin-top: 25%;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .title {
+        font-size: 3vw !important;
+    }
+
+    .scanner-li {
+        margin-top: 35%;
+    }
+
+    .big-title,
+    .top-title {
+        font-size: 4.2vw !important;
+    }
+
+    .first-text {
+        margin-top: 25%;
+
     }
 }
 
 
 @media screen and (min-width: 1200px) {
     .first-text {
-        margin-top: 85%;
+        margin-top: 27% !important;
+    }
+
+    .big-title,
+    .top-title {
+        font-size: 3.5vw !important;
+    }
+
+    .title {
+        font-size: 2.5vw !important;
     }
 }
 
 @media screen and (min-width: 1300px) {
     .first-text {
-        margin-top: 90%;
+        margin-top: 27%;
     }
 }
 
@@ -60,43 +135,13 @@
         font-size: 2vw !important;
     }
 
-    .first-text {
-        margin-top: 100%;
-    }
-
     .scanner-li {
         margin-top: 120px;
     }
-}
 
-@media screen and (min-width: 1575px) {
-    .first-text {
-        margin-top: 105%;
-    }
-}
-
-@media screen and (min-width: 1630px) {
-    .first-text {
-        margin-top: 110%;
-    }
-
-}
-
-@media screen and (min-width: 1700px) {
-    .first-text {
-        margin-top: 115%;
-    }
-}
-
-@media screen and (min-width: 1765px) {
-    .first-text {
-        margin-top: 120%;
-    }
-}
-
-@media screen and (min-width: 1880px) {
-    .first-text {
-        margin-top: 125%;
+    .big-title,
+    .top-title {
+        font-size: 3vw !important;
     }
 }
 
@@ -108,8 +153,6 @@
     font-family: Helvetica, sans-serif;
     font-weight: 100 !important;
 }
-
-
 
 .card {
     border: none;
